--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.2",
+    "date-fns": "^2.29.3",
     "multi-range-slider-react": "^2.0.2",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
+    "react-widgets": "^5.8.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
