--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
     "multi-range-slider-react": "^2.0.2",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
     "react-multi-carousel": "^2.8.2",
     "react-paginate": "^8.1.4",
     "react-rating-stars-component": "^2.2.0",
